# paperkit

./: .gitignore  README.md  pyproject.toml
paperkit/: __init__.py  __main__.py  cli.py  config.py  formatter.py  initializer.py  templates.py
pypaper/: README.md  __init__.py  cli.py  converter.py  formatter.py  initializer.py
