[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypaper"
version = "1.0.0"
description = "Academic manuscript toolkit for creating, converting, and formatting papers"
readme = "pypaper/README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "PyPaper Contributors"}
]
keywords = ["academic", "paper", "manuscript", "latex", "word", "docx", "converter", "formatter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "python-docx>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pypaper"
Documentation = "https://github.com/yourusername/pypaper/blob/main/pypaper/README.md"
Repository = "https://github.com/yourusername/pypaper"
"Bug Tracker" = "https://github.com/yourusername/pypaper/issues"

[project.scripts]
pypaper = "pypaper.cli:main"
