[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypaper"
version = "1.0.0"
description = "Academic manuscript toolkit for creating, converting, and formatting papers"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE*"]
authors = [
    {name = "Rui Ying"}
]
keywords = ["academic", "paper", "manuscript", "latex", "word", "docx", "converter", "formatter"]

dependencies = [
    "python-docx>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/ruiying-ocean/pypaper"
Documentation = "https://github.com/ruiying-ocean/pypaper/blob/main/README.md"
Repository = "https://github.com/yourusername/pypaper"
"Bug Tracker" = "https://github.com/yourusername/pypaper/issues"

[project.scripts]
pypaper = "pypaper.cli:main"
