[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperkit"
version = "1.0.0"
description = "Academic manuscript toolkit for creating, converting, and formatting papers"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE*"]
authors = [
    {name = "Rui Ying"}
]
keywords = ["academic", "paper", "manuscript", "latex", "word", "docx", "converter", "formatter"]

dependencies = [
    "python-docx>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/ruiying-ocean/paperkit"
Documentation = "https://github.com/ruiying-ocean/paperkit/blob/main/README.md"
Repository = "https://github.com/ruiying-ocean/paperkit"
"Bug Tracker" = "https://github.com/ruiying-ocean/paperkit/issues"

[project.scripts]
paperkit = "paperkit.cli:main"
